fix: changed hamburger background to transparent so it wont overlap with sidebar

--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h4 {
 /* Hamburger button */
 .hamburger {
   font-size: 30px;
-  background-color: lightblue;
+  background-color: transparent;
   color: white;
   border: none;
   cursor: pointer;
